Add profile routes
