# src/models/User.ts
@@ -5,7 +5,7 @@ export interface IUser extends Document {
     lastName: string;
     email: string;
     password: string;
-    phoneNumber: string;
+    phoneNumber?: string;
     resetPasswordToken?: string;
     resetPasswordExpires?: Date;
 }
